# cam_navigation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  navigation.py
cam_pointcloud_match/: CMakeLists.txt  main.cpp  type.h
cam_pointcloud_match/business/: CameraPump.cpp  CameraPump.h  FileTransfer.cpp  FileTransfer.h  business.cpp  business.h
cam_pointcloud_match/cam/: depth_camera.h
cam_pointcloud_match/cam/kinect/: kinect.cpp  kinect.h
cam_pointcloud_match/cam/orbbecv/: orbbecv_cam.cpp  orbbecv_cam.h
cam_pointcloud_match/cam/percipio/: percipio.cpp  percipio.h
cam_pointcloud_match/cam/real_sense/: real_sense.cpp  real_sense.h
cam_pointcloud_match/common/: WorkPump.cpp  WorkPump.h  common_kit.cpp  common_kit.h
cam_pointcloud_match/common/data_trans/: HttpClient.cpp  HttpClient.h  MQTTClient.cpp  MQTTClient.h  mongoose.c
cam_pointcloud_match/common/math/: math_kit.cpp  math_kit.h  open3d_kit.cpp  open3d_kit.h  opencv_kit.cpp  opencv_kit.h
cam_pointcloud_match/qt resources/: Save.qrc  Scan.qrc  Screenshot.qrc  Video.qrc  closeCam.qrc  openCam.qrc
cam_pointcloud_match/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_navigation.py
